# ai-rag-engine

./: .gitignore  CMakeLists.txt  payload.json
apps/: hello.cpp  infer_demo.cpp  llm_cli.cpp
libs/SQLiteCpp-master/examples/example2/: CMakeLists.txt
libs/SQLiteCpp-master/sqlite3/: README.md
models/: README.md
python/: BM25.py  FAISS.py  Flask.py  SQLite.py  ingest.py  main.py  rag_cli.py  requirements.txt
